Fix Blink list bullet clipping on columns

--- a/stylesheets/layout/_lists.scss
+++ b/stylesheets/layout/_lists.scss
@@ -32,6 +32,8 @@ article li {
 		position: absolute;
 		left: -0.5em;
 
+		z-index: layer('default'); // required to prevent Blink clipping issues on columns
+
 		font-weight: bold;
 	}
 
